--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,5 +16,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 
-spring.security.user.name=suhag123
-spring.security.user.password=suhag123
+# spring.security.user.name=suhag123
+# spring.security.user.password=suhag123
